--- a/src/components/activity-timer/activity-timer.module.scss
+++ b/src/components/activity-timer/activity-timer.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
+    min-width: 360px;
 }
 
 .activity-title {
@@ -12,6 +13,7 @@
     display: grid;
     grid-auto-flow: column;
     height: 48px;
+    gap: 10px;
 }
 
 .button-container {
@@ -39,7 +41,7 @@
 }
 
 .start-button {
-    background-color: #228B22;
+    background-color: #00b300;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 2px 3px 0 rgba(0, 0, 0, 0.06);
 }
 
@@ -70,7 +72,7 @@
 }
 
 .activity-indicator-active {
-    background-color: #228B22;
+    background-color: #00b300;
 }
 
 .activity-indicator-inactive {
