--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,17 +1,18 @@
 .root {}
 
 .header-container {
-    background-color: #00b300;
-    width: 100%;
-    padding: 0px 8px;
+    padding: 0px;
     border-radius: 4px;
+    border: 2px solid #000000;
+    background-color: #F7F7F7;
     background-image: none;
-    background-repeat: repeat;
     background-position: 0%;
     background-size: auto;
+    background-repeat: repeat;
     background-attachment: scroll;
     background-origin: padding-box;
     background-clip: border-box;
+    box-shadow: 1.41px 1.41px 1px 1px black;
 }
 
 .header-text {
