--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -13,8 +13,15 @@
     background-origin: padding-box;
     background-clip: border-box;
     box-shadow: 1.41px 1.41px 1px 1px black;
+    display: flex;
+    justify-content: space-around;
+    gap: 4px;
 }
 
 .header-text {
     text-align: center;
+}
+
+.url-button {
+    margin: 8px;
 }
